force-app/main/default/objects/Account/fields/Test_Auto__c.field-meta.xml
<CustomField>
    <fullName>Test_Auto__c</fullName>
    <label>Test Auto</label>
    <type>AutoNumber</type>
</CustomField>