force-app/main/default/objects/Account/fields/Test_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Test_Number_2__c</fullName>
    <label>Test Number 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>