force-app/main/default/objects/Account/fields/Test_Text_Number__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_Number__c</fullName>
    <label>Test Text Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>