force-app/main/default/objects/Account/fields/Testing_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Testing_Autonumber__c</fullName>
    <label>Testing Autonumber</label>
    <type>AutoNumber</type>
</CustomField>